--- a/MyRestaurant/templates/includes/slider.html
+++ b/MyRestaurant/templates/includes/slider.html
@@ -1,43 +1,20 @@
-  <section class="home-slider owl-carousel js-fullheight">
-      <div class="slider-item js-fullheight" style="background-image: url(images/bg_1.jpg);">
-      	<div class="overlay"></div>
+<section class="home-slider owl-carousel js-fullheight">
+  {% for slide in slide_item %}
+    {% if slide.is_visible %}
+      <div class="slider-item js-fullheight" style="background-image: url({{ slide.photo.url }});">
+        <div class="overlay"></div>
         <div class="container">
           <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
-
             <div class="col-md-12 col-sm-12 text-center ftco-animate">
-              <h1 class="mb-4 mt-5">Our Delicious Specialties</h1>
-              <p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
+              <h1 class="mb-4 mt-5">{{ slide.title }}</h1>
+              <p>
+                <a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a>
+                <a href="{% url 'menu' %}" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a>
+              </p>
             </div>
-
           </div>
         </div>
       </div>
-
-      <div class="slider-item js-fullheight" style="background-image: url(images/bg_2.jpg);">
-      	<div class="overlay"></div>
-        <div class="container">
-          <div class="row slider-text js-fullheight justify-content-center align-items-center" data-scrollax-parent="true">
-
-            <div class="col-md-12 col-sm-12 text-center ftco-animate">
-              <h1 class="mb-4 mt-5">The Best Place to Kick of Your Day</h1>
-              <p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
-            </div>
-
-          </div>
-        </div>
-      </div>
-
-      <div class="slider-item js-fullheight" style="background-image: url(images/bg_3.jpg);">
-      	<div class="overlay"></div>
-        <div class="container">
-          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-            <div class="col-md-12 col-sm-12 text-center ftco-animate">
-              <h1 class="mb-4 mt-5">Creamy Hot and Ready to Serve</h1>
-              <p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </section>
+    {% endif %}
+  {% endfor %}
+</section>
