--- a/MyRestaurant/templates/includes/progress.html
+++ b/MyRestaurant/templates/includes/progress.html
@@ -1,4 +1,4 @@
-<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(images/bg_4.jpg);" data-stellar-background-ratio="0.5">
+<section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url(/static/images/bg_4.jpg);" data-stellar-background-ratio="0.5">
 		<!-- <section class="ftco-section ftco-counter img ftco-no-pt" id="section-counter"> -->
     	<div class="container">
     		<div class="row d-md-flex align-items-center justify-content-center">
