--- a/MyRestaurant/culinary_odissey/templates/book_table.html
+++ b/MyRestaurant/culinary_odissey/templates/book_table.html
@@ -1,66 +1,39 @@
 <section class="ftco-section ftco-no-pt ftco-no-pb">
-			<div class="container-fluid px-0">
-				<div class="row d-flex no-gutters">
-          <div class="col-md-6 ftco-animate makereservation p-4 p-md-5 pt-5 pt-md-0">
-          	<div class="heading-section ftco-animate mb-5">
-	          	<span class="subheading">Book a table</span>
-	            <h2 class="mb-4">Make Reservation</h2>
-	          </div>
-            <form action="{% url 'odyssey:home' %}">
-              <div class="row">
-                  {% csrf_token %}
+    <div class="container-fluid px-0">
+        <div class="row d-flex no-gutters">
+            <div class="col-md-6 ftco-animate makereservation p-4 p-md-5 pt-5 pt-md-0">
+                <div class="heading-section ftco-animate mb-5">
+                    <span class="subheading">Book a table</span>
+                    <h2 class="mb-4">Make Reservation</h2>
+                </div>
+                <form action="{% url 'odyssey:home' %}" method="post" role="form">
+                    {% csrf_token %}
 
-                  {{ reservation_form.as_p }}
+                    <div class="row">
+                        {% for field in reservation_form %}
+                            <div class="col-md-6">
+                                <div class="form-group">
+                                    {{ field.label_tag }}
+                                    {{ field }}
+                                    {{ field.errors }}
+                                </div>
+                            </div>
+                        {% endfor %}
+                    </div>
 
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="">Name</label>
-                    <input type="text" class="form-control" placeholder="Your Name">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="">Email</label>
-                    <input type="text" class="form-control" placeholder="Your Email">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="">Phone</label>
-                    <input type="text" class="form-control" placeholder="Phone">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="">Date</label>
-                    <input type="text" class="form-control" id="book_date" placeholder="Date">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="">Time</label>
-                    <input type="text" class="form-control" id="book_time" placeholder="Time">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="">People</label>
-                    <input type="text" class="form-control" id="book_time" placeholder="#people">
-                  </div>
-                </div>
-                <div class="col-md-12 mt-3">
-                  <div class="form-group">
-                    <input type="submit" value="Make a Reservation" class="btn btn-primary py-3 px-5">
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="col-md-6 d-flex align-items-stretch pb-5 pb-md-0">
-						<div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28185.511678040446!2d86.88604951856101!3d27.98811467050819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e854a215bd9ebd%3A0x576dcf806abbab2!2z0JTQttC-0LzQvtC70YPQvdCz0LzQsA!5e0!3m2!1suk!2sde!4v1704202700097!5m2!1suk!2sde" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                    <div class="col-md-12 mt-3">
+                        <div class="form-group">
+                            <input type="submit" value="Make a Reservation" class="btn btn-primary py-3 px-5">
+                        </div>
+                    </div>
+                </form>
+            </div>
 
-          </div>
-
+            <div class="col-md-6 d-flex align-items-stretch pb-5 pb-md-0">
+                <div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28185.511678040446!2d86.88604951856101!3d27.98811467050819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e854a215bd9ebd%3A0x576dcf806abbab2!2z0JTQttC-0LzQvtC70YPQvdCz0LzQsA!5e0!3m2!1suk!2sde!4v1704202700097!5m2!1suk!2sde" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
         </div>
-			</div>
-		</section>
+    </div>
+</section>
