--- a/MyRestaurant/culinary_odissey/templates/menu_second.html
+++ b/MyRestaurant/culinary_odissey/templates/menu_second.html
@@ -30,24 +30,7 @@
   </head>
   <body>
 
-	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-	    <div class="container">
-	      <a class="navbar-brand">Culinary Odyssey</a>
-	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="oi oi-menu"></span> Menu
-	      </button>
-
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-                <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item active"> <a href="{% url 'menu' %}" class="nav-link">Menu</a></li>
-                {#  add another link#}
-
-
-	        </ul>
-	      </div>
-	    </div>
-	  </nav>
+	  {% include 'includes/navbar.html' %}
     <!-- END nav -->
     
     <section class="hero-wrap hero-wrap-2" style="background-image: url('/static/images/bg_3.jpg');" data-stellar-background-ratio="0.5">
