--- a/MyRestaurant/templates/includes/navbar.html
+++ b/MyRestaurant/templates/includes/navbar.html
@@ -11,7 +11,7 @@
 {#                    <li class="nav-item active"><a href="{{ item.get_absolute_url }}" class="nav-link">{{ item.title}}</a></li>#}
 {#                {% endfor %}#}
                 <li class="nav-item active"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item active"> <a href="{% url 'menu' %}" class="nav-link">Menu</a></li>
+                <li class="nav-item active"> <a href="{% url 'app:menu' %}" class="nav-link">Menu</a></li>
                 {#  add another link#}
 
 	        </ul>
