--- a/MyRestaurant/templates/includes/slider.html
+++ b/MyRestaurant/templates/includes/slider.html
@@ -9,7 +9,7 @@
               <h1 class="mb-4 mt-5">{{ slide.title }}</h1>
               <p>
                 <a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a>
-                <a href="{% url 'menu' %}" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a>
+                <a href="{% url 'app:menu' %}" class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a>
               </p>
             </div>
           </div>
