--- a/MyRestaurant/templates/about.html
+++ b/MyRestaurant/templates/about.html
@@ -65,7 +65,7 @@
 	        	<li class="nav-item"><a href="../culinary_odissey/templates/menu_second.html" class="nav-link">Menu</a></li>
 	        	<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
 	          <li class="nav-item"><a href="../contact/templates/contact.html" class="nav-link">Contact</a></li>
-	          <li class="nav-item cta"><a href="reservation.html" class="nav-link">Book a table</a></li>
+	          <li class="nav-item cta"><a href="../culinary_odissey/templates/reservation.html" class="nav-link">Book a table</a></li>
 	        </ul>
 	      </div>
 	    </div>
