--- a/MyRestaurant/templates/includes/navbar.html
+++ b/MyRestaurant/templates/includes/navbar.html
@@ -13,7 +13,7 @@
                 <li class="nav-item{% if request.path == '/' %} active{% endif %}"><a href="/" class="nav-link">Home</a></li>
                 <li class="nav-item{% if request.path == '/menu/' %} active{% endif %}"> <a href="{% url 'app:menu' %}" class="nav-link">Menu</a></li>
                 <li class="nav-item{% if request.path == '/contact/' %} active{% endif %}"> <a href="{% url 'contact:contact_page' %}" class="nav-link">Contact</a></li>
-
+                <li class="nav-item cta"><a href="{% url 'odyssey:boo_a_table' %}" class="nav-link">Book a table</a></li>
                 {#  add another link#}
 
 	        </ul>
